--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "type": "module",
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.x"
+  },
   "dependencies": {
     "app-root-path": "^3.1.0",
     "body-parser": "^1.20.2",
@@ -22,4 +25,5 @@
     "mysql2": "^3.9.1",
     "nodemon": "^3.0.3"
   }
+  
 }
