--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [{ "src": "src/app.js", "use": "@vercel/node" }],
     "env": {
-      "PORT":3000,  
+      "PORT":"3000",  
       "MYSQL_HOST": "localhost",
       "MYSQL_USER": "root",
       "MYSQL_PASSWORD": "12345678",
